--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py25,py26,py27
+envlist = py25,py26,py27,cover
+
 
 [testenv]
 changedir = tests
@@ -8,5 +9,24 @@ deps =
     html5lib
     webob==dev
     sqlalchemy
+    python-memcached
 commands =
-    nosetests {posargs:--with-coverage}
+    nosetests
+
+
+[testenv:cover]
+changedir = ./
+basepython =
+    python2.6
+commands =
+    nosetests --with-xunit --with-xcoverage --cover-package=insanities --detailed-errors --cover-erase --nocapture
+deps =
+    html5lib
+    webob==dev
+    sqlalchemy
+    python-memcached
+    mint
+    jinja2
+    nose
+    coverage==3.4
+    nosexcover
