sed insanities/iktomi

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -60,9 +60,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in build/qthelp, like this:"
-	@echo "# qcollectiongenerator build/qthelp/insanities.qhcp"
+	@echo "# qcollectiongenerator build/qthelp/iktomi.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile build/qthelp/insanities.qhc"
+	@echo "# assistant -collectionFile build/qthelp/iktomi.qhc"
 
 latex:
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) build/latex
