--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -23,5 +23,5 @@ run = %(bin-dir)s/nosetests --all-modules
 env = py26
 cwd = tests
 run =
-    %(bin-dir)s/nosetests --with-xunit --with-xcoverage --cover-package=insanities \
+    %(bin-dir)s/nosetests --with-xunit --with-xcoverage --cover-package=iktomi \
                           --detailed-errors --cover-erase --nocapture
