--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -7,6 +7,7 @@ deps =
     sqlalchemy
     python-memcached
     nose
+    nosexcover
 
 
 [py27]
@@ -23,5 +24,4 @@ run = %(bin-dir)s/nosetests --all-modules
 env = py26
 cwd = tests
 run =
-    %(bin-dir)s/nosetests --with-xunit --with-xcoverage --cover-package=iktomi \
-                          --detailed-errors --cover-erase --nocapture
+    %(bin-dir)s/nosetests --with-xunit --with-xcoverage --cover-package=iktomi --detailed-errors --cover-erase --nocapture --all-modules
