Basic test for replication

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -8,6 +8,9 @@ deps =
     python-memcached
     nose
     nosexcover
+;    testalchemy
+;    git+git://github.com/riffm/testalchemy
+    git+git://github.com/ods/testalchemy
     jinja2
     py-dom-xpath
     PIL
