Replication: InstrumentedAttribute -> QueryableAttribute as it more appropriate

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -18,7 +18,7 @@ deps =
 
 [cmd:test]
 cwd = tests
-run = %(bin-dir)s/nosetests --all-modules
+run = %(bin-dir)s/nosetests --all-modules -s --tests=unstable.db.sqla.replication:ReplicationTests
 
 
 [cmd:coverage]
