--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -15,6 +15,8 @@ deps =
     py-dom-xpath
     PIL
     webtest
+    sphinx
+    sphinxtogithub
 
 
 [cmd:test]
@@ -26,3 +28,8 @@ run = %(bin-dir)s/nosetests --all-modules
 cwd = tests
 run =
     %(bin-dir)s/nosetests --with-xunit --with-xcoverage --cover-package=iktomi --detailed-errors --cover-erase --nocapture --all-modules
+
+[cmd:docs]
+cwd = doc
+run =
+     make SPHINXBUILD=%(bin-dir)s/sphinx-build html
