--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -2,18 +2,32 @@
 python = python2.7
 deps =
     html5lib==0.95
-;    webob==dev
     webob
-    sqlalchemy
+    sqlalchemy==0.9.4
     python-memcached
     nose
     nosexcover
-;    testalchemy
-;    git+git://github.com/riffm/testalchemy
     git+git://github.com/ods/testalchemy
     jinja2
-    py-dom-xpath
-    PIL
+    svn+http://py-dom-xpath.googlecode.com/svn/trunk/XPath
+    pillow
+    webtest
+    sphinx
+    sphinxtogithub
+
+[py27-sa08]
+python = python2.7
+deps =
+    html5lib==0.95
+    webob
+    sqlalchemy==0.8.6
+    python-memcached
+    nose
+    nosexcover
+    git+git://github.com/ods/testalchemy
+    jinja2
+    svn+http://py-dom-xpath.googlecode.com/svn/trunk/XPath
+    pillow
     webtest
     sphinx
     sphinxtogithub
