fixed tests for lxml html cleaner

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -1,7 +1,6 @@
 [py27]
 python = python2.7
 deps =
-    html5lib==0.95
     webob
     sqlalchemy==0.9.4
     python-memcached
@@ -9,16 +8,15 @@ deps =
     nosexcover
     git+git://github.com/ods/testalchemy
     jinja2
-    svn+http://py-dom-xpath.googlecode.com/svn/trunk/XPath
     pillow
     webtest
     sphinx
     sphinxtogithub
+    lxml
 
 [py27-sa08]
 python = python2.7
 deps =
-    html5lib==0.95
     webob
     sqlalchemy==0.8.6
     python-memcached
@@ -26,11 +24,11 @@ deps =
     nosexcover
     git+git://github.com/ods/testalchemy
     jinja2
-    svn+http://py-dom-xpath.googlecode.com/svn/trunk/XPath
     pillow
     webtest
     sphinx
     sphinxtogithub
+    lxml
 
 
 [cmd:test]
