--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -10,8 +10,8 @@ deps =
     jinja2
     pillow
     webtest
+    docutils
     sphinx
-    sphinxtogithub
     lxml
 
 [py27-sa08]
@@ -43,5 +43,6 @@ run =
 
 [cmd:docs]
 cwd = doc
+env = py27
 run =
      make SPHINXBUILD=%(bin-dir)s/sphinx-build html
