nose --> py.test

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -4,8 +4,8 @@ deps =
     webob
     sqlalchemy==0.9.4
     python-memcached
-    nose
-    nosexcover
+    pytest
+    pytest-cov
     git+git://github.com/ods/testalchemy
     jinja2
     pillow
@@ -20,8 +20,8 @@ deps =
     webob
     sqlalchemy==0.8.6
     python-memcached
-    nose
-    nosexcover
+    pytest
+    pytest-cov
     git+git://github.com/ods/testalchemy
     jinja2
     pillow
@@ -33,13 +33,13 @@ deps =
 
 [cmd:test]
 cwd = tests
-run = %(bin-dir)s/nosetests --all-modules
+run = %(bin-dir)s/py.test
 
 
 [cmd:coverage]
 cwd = tests
 run =
-    %(bin-dir)s/nosetests --with-xunit --with-xcoverage --cover-package=iktomi --detailed-errors --cover-erase --nocapture --all-modules
+    %(bin-dir)s/py.test --cov iktomi
 
 [cmd:docs]
 cwd = doc
