--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -2,7 +2,8 @@
 python = python2.7
 deps =
     webob
-    sqlalchemy==0.9.4
+    sqlalchemy==0.9.7
+    pymysql
     python-memcached
     pytest
     pytest-cov
@@ -19,6 +20,7 @@ python = python2.7
 deps =
     webob
     sqlalchemy==0.8.6
+    pymysql
     python-memcached
     pytest
     pytest-cov
