Shorter output from py.test

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -35,7 +35,7 @@ deps =
 
 [cmd:test]
 cwd = tests
-run = %(bin-dir)s/py.test -r fEsw --strict
+run = %(bin-dir)s/py.test -q -r fEsw --strict
 
 
 [cmd:coverage]
