--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -15,6 +15,23 @@ deps =
     sphinx
     lxml
 
+[py27-sa1]
+python = python2.7
+deps =
+    webob
+    https://github.com/zzzeek/sqlalchemy/archive/rel_1_0.zip
+    pymysql
+    python-memcached
+    pytest
+    pytest-cov
+    git+git://github.com/ods/testalchemy
+    jinja2
+    pillow
+    webtest
+    docutils
+    sphinx
+    lxml
+
 [py27-sa08]
 python = python2.7
 deps =
