Report xfailed and xpassed tests

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -52,7 +52,7 @@ deps =
 
 [cmd:test]
 cwd = tests
-run = %(bin-dir)s/py.test -q -r fEsw --strict
+run = %(bin-dir)s/py.test -q -r fEsxXw --strict
 
 
 [cmd:coverage]
