fixed several tests (hack?)

--- a/pycamp.cfg
+++ b/pycamp.cfg
@@ -19,7 +19,7 @@ deps =
 python = python2.7
 deps =
     webob
-    https://github.com/zzzeek/sqlalchemy/archive/rel_1_0.zip
+    sqlalchemy==1.0.4
     pymysql
     python-memcached
     pytest
