--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 *.egg-info
 *.db
 *.orig
+*.bak
 dist
 venv
+venv-*
 build
 MANIFEST
 pip-log.txt
@@ -15,7 +17,6 @@ coverage.xml
 nosetests.xml
 examples/filefield/media/
 .DS_Store
-.pycamp
 .coverage
 .swp
 .ropeproject
