Report uncovered branches

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,12 @@
 [metadata]
 description-file = README.md
+
 [tool:pytest]
-python_files=tests/*.py
+python_files = tests/*.py
+
+[coverage:run]
+branch = True
+
+[coverage:report]
+show_missing = True
+skip_covered = True
